--- a/css/profileuniversal.css
+++ b/css/profileuniversal.css
@@ -73,6 +73,7 @@ nav .nav-icons {
 .main {
     background-color: #f0f0f0;
     height: 100%;
+    min-height: 100vh;
 }
 
 .main-container {
@@ -557,7 +558,6 @@ font-size: 15px;
     border-radius: 6px; 
     cursor: pointer; 
     font-size: 14px;
-    background-color: #E2E2E2; 
     box-shadow: 2px 2px 5px 1px rgba(255, 255, 255, 0.1); 
     display: flex; 
     justify-content: center; 
