--- a/css/universal.css
+++ b/css/universal.css
@@ -17,6 +17,7 @@ body {
     margin: 0;
     height: 100%;
     width: 100%;
+    min-height: 100vh;
     font-family: "Roboto", serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -74,6 +75,7 @@ nav .nav-icons {
     margin-top: 0;
     transition: background-color 0.3s ease, margin-top 0.3s ease;
     height: 100%;
+    min-height: 100vh;
 }
 
 .main-container {
@@ -87,7 +89,7 @@ nav .nav-icons {
     grid-row: 1/6;
     grid-column: 1/2;
     padding: 20px;
-    height: 100vh;
+    height: 100%;
     overflow-y: auto;
     overflow: hidden;
 }
@@ -245,6 +247,12 @@ nav .nav-icons {
 
 ::placeholder {
     color: black;
+}
+
+.header {
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 .backgroundImage {
@@ -720,6 +728,7 @@ a {
     .main {
       padding-top: 15px;
       height: 100%;
+      min-height: 100vh;
     }
   
     .main-container {
@@ -728,6 +737,7 @@ a {
       width: 100%;
       padding: 15px;
       max-width: 736px;
+      min-height: 100vh;
     }
   
     .profileInformation {
@@ -812,7 +822,7 @@ a {
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 0px;
+        gap: 10px;
     }
   
     .userFeed {
@@ -918,6 +928,11 @@ a {
         margin-top: 10px;
         width: 90%;
         max-width: 367px;
+    }
+
+    .mobileFeed .navSearchBar {
+        width: 100%;
+        margin-bottom: 10px;
     }
 
   }
